# moa

./: .gitignore  PRD.md  README.md  TESTING.md  codex-run-vite.cmd  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json
src/: App.svelte  app.css  app.d.ts  mockStorage.ts  storage.ts  text.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
